@@ -573,6 +573,10 @@ Web Document Conformance Checker (BETA)</title>
           element must have an <code>xmlns</code> attribute
           whose value is set to 
           <code>http://www.w3.org/1999/xhtml</code>.</p></dd>
+      <dt>If the element with the error is <code>blink</code>,
+      <code>center</code>, or <code>marquee</code> element</dt>
+          <dd>These elements are not part of the HTML standard.
+          Use CSS for styling control.</dd>
       </dl>
     </p>
   </d:desc>
@@ -613,11 +617,28 @@ Web Document Conformance Checker (BETA)</title>
   </d:desc>
 </d:item>
 
+<d:item name="attribute not allowed" class="attribute-error">
+  <d:message xml:lang="en">Attribute
+  <code><var>{local-name}</var></code> is not allowed for
+  <code><var>{element-local-name}</var></code> element.</d:message>
+  <d:desc xml:lang="en">
+    <p>An attribute is specified where it is not allowed.
+    The document is non-conforming.</p>
+
+    <dl>
+    <dt>HTML <code>meta</code> element</dt>
+        <dd>For HTML <code>meta</code> element, <em>only one</em> of
+        <code>name</code>, <code>http-equiv</code>, or <code>charset</code>
+        attribute is allowed.</dd>
+    </dl>
+  </d:desc>
+</d:item>
+
 <d:item name="in HTML:xml:lang"
     class="attribute-error">
   <d:message xml:lang="en">The <code>xml:lang</code> attribute is not 
   allowed in HTML document.</d:message>
-  <d:desc>
+  <d:desc xml:lang="en">
     <p>The <code>xml:lang</code> attribute is not allowed in
     HTML document.  The document is non-conforming.</p>
 
@@ -681,7 +702,7 @@ Web Document Conformance Checker (BETA)</title>
     <p>The <code>xmlns</code> attribute in the <code>null</code>
     namespace is not allowed in XHTML document.</p>
 
-    <p>This error should not occur in conformance-checking 
+    <p>This error should not occur in conformance-checking of
     static documents.</p>
   </d:desc>
 </d:item>
@@ -696,6 +717,30 @@ Web Document Conformance Checker (BETA)</title>
   <d:message xml:lang="en">This attribute only allow a limited set of 
   values and the specified value <code><var>{@}</var></code> is not one 
   of them.</d:message>
+  <d:desc xml:lang="en">
+    <p>For this attribute only several values are allowed and the
+    value of the attribute is not one of them.  The document
+    is non-conforming.</p>
+
+    <dl>
+    <dt>HTML <code>meta</code> element, <code>http-equiv</code> attribute</dt>
+        <dd><p>Only <code>Default-Style</code> and <code>Refresh</code>
+        is allowed.</p>
+        <p>Value <code>Content-Type</code> is obsolete; for charset
+        declaration, the <code>charset</code> attribute can be used as:
+        <pre class="html example"><code>&lt;meta charset="<var>charset-name</var>"></code></pre>
+        ... where <var>charset-name</var> is a name of the character encoding
+        of the document, such as <code>utf-8</code>.</p>
+        <p>Values <code>Content-Style-Type</code> and
+        <code>Content-Script-Type</code> are currently not allowed.</p>
+        <p>Value <code>Keywords</code> is not allowed.  Use
+        <code>name</code> attribute instead of <code>http-equiv</code>
+        attribute.</p>
+        <p>Values <code>Expires</code>, <code>Pragma</code>,
+        and <code>Cache-Control</code> are not allowed;
+        use <em>real</em> HTTP header fields for cache control.</p></dd>
+    </dl>
+  </d:desc>
 </d:item>
 
 <d:item name="duplicate ID"
@@ -987,6 +1032,12 @@ Web Document Conformance Checker (BETA)</title>
     The link type might have been added to the registry since then.
     In such case it might be conforming.  Otherwise, the
     document is non-conforming.</p>
+
+    <dl>
+    <dt>Link types <code>shortcut icon</code></dt>
+        <dd>Link type <code>shortcut</code> is not registered.
+        Use only <code>icon</code> for linking to so-called favicon.</dd>
+    </dl>
   </d:desc>
 </d:item>
 
@@ -1041,6 +1092,6 @@ manakaiIsHTML:0;;XML Document
 and/or modify it under the same terms as Perl itself.</p>
 </section>
 
-<!-- $Date: 2007/08/11 13:54:55 $ -->
+<!-- $Date: 2007/09/02 07:59:01 $ -->
 </body>
 </html>
